.devcontainer/test/jinjaboard/errors/nested/middle.yaml.j2
type: markdown
content: !include leaf.yaml.j2
